--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,12 +3,12 @@
      <h1> Fassih Baaj</h1>
    </div>
    <div>
-      <h1><p class="text-center"> Fassih Baaj</p></h1>
+      <h1><p class="text-center"> Fassih Baaj CV </p></h1>
    </div>
 
   <div id=picturB class="col-lg-12">
     <div class="col-lg-6">
-       <img src="/assets/fassih.jpg" alt="/assets/fassih.jpg" class="img-thumbnail">
+       <img src="/assets/fassih.jpg" alt="/assets/fassih.jpg" class="img-thumbnail fassih">
      </div>
      <div id="pictur1" class="col-lg-6">
        <ul>
@@ -22,6 +22,10 @@
          <li><a href="#pictur4">Education And Training</a></li>
          <br>
          <li><a href="#pictur5">Professional Experience</a></li>
+         <i class="fa fa-facebook" aria-hidden="true"></i>
+
+
+
       </ul>
 
      </div>
@@ -32,7 +36,7 @@
     </div>
     Personal Details
   </h1>
-  <p>
+  <ul>
     <li>   Given Name : Fassih </li>
     <li>   Family Name : Baaj</li>
     <li>   Date of Birth : 30.10.1980</li>
@@ -40,9 +44,10 @@
     <li>   Marital Status : single</li>
     <li>   Driving License : intarnational</li>
     <li>   Address : Berlin Attila strasa</li>
-    <li>   Cell : 004915217961390</li>
+    <li><a href="tel:004915217961390">tel:004915217961390</a></li>
+
     <li>   <a href="mailto:fassihbaaj@hotmail.com">E mail : Fassihbaaj@hotmail.com</a></li>
-  </p>
+  </ul>
 </div>
 <div>
   <h1>
@@ -120,7 +125,7 @@ To seek a position with a reputable firm where I can put into it the vast inform
  <div id="pictur2" class="col-lg-6">
   <img src=hhhh class="img-responsive"></img>
 </div>
-  <ul>
+  <ul class="nav navbar-nav">
     <div id="pictur2">
     <li><a href="#">water pumps</a></li>
     <li><a href="#">foosubmersible pumps</a></li>
